--- a/public/partials/document_list.html
+++ b/public/partials/document_list.html
@@ -51,11 +51,19 @@
                         md-virtual-repeat="item in virtualScroll"
                         md-on-demand="true"
                         md-item-size="50"
-                        class="repeated-item md-3-line md-long-text"
+                        class="repeated-item md-2-line"
                         ng-click="loadFullDocument(item)">
-                    <div class="md-body-2">{{ item.metadata.Subject.join(", ") }} #{{item.id}}</div>
-                    <md-button class="md-primary md-raised metadata-button" ng-click="sourceShared.showMetaDialog($event, item.metadata)">Metadata</md-button>
 
+                    <md-button class="md-icon-button metadata-button" aria-label="Show-meta">
+                        <md-tooltip>
+                            Show Metadata
+                        </md-tooltip>
+                        <md-icon ng-click="sourceShared.showMetaDialog($event, item.metadata)" class="material-icons">info</md-icon>
+                    </md-button>
+                    <div class="md-list-item-text" layout="column">
+                        <h3>{{ item.metadata.Subject.join(", ") }} #{{item.id}}</h3>
+                        <p>Keywords</p>
+                    </div>
                     <md-divider ng-if="!$last"></md-divider>
 
                 </md-list-item>
