--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -26,7 +26,7 @@
     </md-tab-label>
 
     <md-tab-body>
-        <md-content flex layout-padding ng-init="keywords = retrieveKeywords(doc)">
+        <md-content flex layout-padding ng-init="keywords = retrieveKeywords(doc); links = retrieveLinks(doc)">
             <md-card>
                 <md-card-header>
                     <md-button class="md-icon-button" aria-label="Show-meta">
@@ -36,7 +36,7 @@
                         <md-icon ng-click="sourceShared.showMetaDialog($event, doc.meta)" class="material-icons md-secondary">info</md-icon>
                     </md-button>
                     <md-card-header-text>
-                        <span class="md-title">{{ doc.meta.Subject.join(', ') }}</span>
+                        <span class="md-title">{{ sourceShared.pluckMetaValues(doc.meta.Subject).join(', ') }}</span>
                         <md-chips
                                 ng-init="initTags(doc)"
                                 ng-model="tags[doc.id]"
@@ -64,7 +64,11 @@
                             <b>Keywords: </b>
                             <span>{{ keywords.join(', ') }}</span>
                         </span>
-                        <span class="md-subhead">No Link</span>
+                        <span class="md-subhead" ng-show="!links.length">No Link</span>
+                        <span class="md-subhead" ng-repeat="(key, val) in links">
+                            <a target="_blank" href="{{ l.val }}" ng-repeat="l in val">{{ l.val }} </a>
+                            ({{ key }})
+                        </span>
                     </md-card-header-text>
                 </md-card-header>
                 <md-card-title>
