small js front end doc

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -97,6 +97,7 @@
                 </md-tabs>
             </footer>
         </div>
+        <!-- context menu for metadata bar charts -->
         <!--<div id="constext-menu-div" class="popupMenu" style="display: none;">
             <ul>
                 <li action="edit">Edit Entity</li>
