--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -79,6 +79,25 @@ html, body {
     height: 100%;
 }
 
+#networkKeyword {
+    position: absolute;
+    overflow-y: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+#center-box-entity {
+    position: relative;
+    width: 30%;
+    height: 100%;
+}
+
+#center-box-keyword {
+    position: relative;
+    width: 30%;
+    height: 100%;
+}
+
 #mynetwork {
     position: absolute;
     overflow-y: hidden;
