Init whitelist Adding entity from frontend to db psql

--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -82,6 +82,7 @@
                       <br />
                       <b>Selected Entity:</b>
                       <span ng-bind="selectedEntity"></span>
+                      <button ng-model="selectedEntity" ng-click="whitelist(selectedEntity)"> Whitelist </button>
                     </div>
                 </md-card-content>
             </md-card>
