Cleaner separation of NetworkController and KeywordNetworkController

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -79,7 +79,7 @@ html, body {
     height: 100%;
 }
 
-#networkKeyword {
+#keywordNetwork {
     position: absolute;
     overflow-y: hidden;
     width: 100%;
