Revert some changes

--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -80,7 +80,7 @@
                     <doc-content layout-padding document="doc" ng-mouseup="showSelectedEntity(doc.content)"></doc-content>
                     <div>
                       <br />
-                      <b>Selected Entity:</b
+                      <b>Selected Entity:</b>
                       <span ng-bind="selectedEntity.text"></span> {{selectedEntity}}
                       <select name="selectEntityType" id="selectEntityType" ng-model="selectedType">
                         <option ng-repeat="entityType in entityTypes">
