--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -77,7 +77,7 @@
                     </md-card-title-text>
                 </md-card-title>
                 <md-card-content>
-                    <doc-content layout-padding document="doc" ng-mouseup="showSelectedEntity(doc.content)"></doc-content>
+                    <doc-content layout-padding document="doc" ng-mouseup="showSelectedEntity(doc.content)" context-menu="menuOptions"></doc-content>
                     <div>
                       <br />
                       <b>Selected Entity:</b>
