--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -77,18 +77,37 @@
                     </md-card-title-text>
                 </md-card-title>
                 <md-card-content>
-                    <doc-content layout-padding document="doc" ng-mouseup="showSelectedEntity(doc.content)" context-menu="menuOptions"></doc-content>
+                    <doc-content layout-padding document="doc" ng-mouseup="showSelectedEntity(doc)" context-menu="menuOptions"></doc-content>
                     <div>
                       <br />
                       <b>Selected Entity:</b>
                       <span ng-bind="selectedEntity.text"></span> {{selectedEntity}}
-                      <select name="selectEntityType" id="selectEntityType" ng-model="selectedType">
+                      <select class="btn btn-default" name="selectEntityType" id="selectEntityType" ng-model="selectedType">
                         <option ng-repeat="entityType in entityTypes">
                           {{ entityType.name }}
                         </option>
                       </select>
-                      <button ng-model="selectedEntity" ng-click="whitelist(selectedEntity, selectedType, doc.id)"> Whitelist </button>
+                      <button type="button" class="btn btn-primary" ng-model="selectedEntity" ng-click="whitelist(selectedEntity, selectedType, doc.id)">
+                        Whitelist
+                      </button>
                     </div>
+                    <script type="text/ng-template" id="myModalContent.html">
+                      <div class="modal-header">
+                          <h3 class="modal-title" id="modal-title">Add Entity: <span ng-bind="entityName"></span></h3>
+                      </div>
+                      <div class="modal-body" id="modal-body">
+                        Select Type:
+                        <select class="btn btn-default" name="selectEntityType" id="selectEntityType" ng-model="selectedType">
+                          <option ng-repeat="entityType in entityTypes">
+                            {{ entityType.name }}
+                          </option>
+                        </select>
+                      </div>
+                      <div class="modal-footer">
+                          <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+                          <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+                      </div>
+                  </script>
                 </md-card-content>
             </md-card>
         </md-content>
