Finalize whitelisting modal and remove unused code and console log

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -432,6 +432,12 @@ footer > div #histogram {
     height: auto !important;
 }
 
+
+.selected-entity {
+  text-decoration: underline;
+  color: #2759AC;
+}
+
 /*
     ======================================
     Bar Chart
