--- a/public/partials/keywordNetwork.html
+++ b/public/partials/keywordNetwork.html
@@ -26,6 +26,10 @@
             <span class="md-body-1">Edge Importance</span>
         </div>
         <md-slider ng-disabled="loading" flex min="1" max="{{ maxEdgeImportance }}" step ="1" md-discrete ng-model="edgeImportance" aria-label="blue"></md-slider>
+
+        <md-checkbox ng-model="tagsSelected" aria-label="Tags" ng-click="selectTags(tagsSelected)">
+            Tags
+        </md-checkbox>
     </div>
 </md-toolbar>
 
