--- a/public/partials/keywordNetwork.html
+++ b/public/partials/keywordNetwork.html
@@ -17,10 +17,10 @@
 
 <md-toolbar>
     <div class="md-toolbar-tools" md-theme="control-theme" style="margin-top: 10px;">
-<!--        <md-input-container layout flex="10" ng-repeat="t in types">
+        <md-input-container layout flex="10" ng-repeat="t in keywordTypes">
             <label>#{{ t.name }}</label>
             <input ng-model="t.sliderModel" ng-change="reloadGraph()" type="number" step="1" min="0" ng-model-options="{updateOn: 'default blur', debounce: {default: 300, blur: 0} }">
-        </md-input-container>-->
+        </md-input-container>
 
         <div flex="20" layout layout-align="center center">
             <span class="md-body-1">Edge Importance</span>
