--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -435,7 +435,7 @@ footer > div #histogram {
 
 .selected-entity {
   text-decoration: underline;
-  color: #2759AC;
+  /*color: #2759AC;*/
 }
 
 /*
@@ -660,4 +660,25 @@ ul#historyList {
     height: auto;
     font-size: 12px;
     color: rgba(0, 0, 0, 0.54);
+}
+
+.md-select {
+  margin: 20px 0;
+  align-items: center;
+  padding: 2px 2px 1px;
+  border: none;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: rgba(0,0,0,0.12);
+  background-color: transparent;
+  position: relative;
+  box-sizing: content-box;
+  width: 100%;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+  flex-grow: 1;
+}
+.md-select:focus {
+  outline: none;
+  border-bottom-color: rgb(63,81,181);
 }
