BugFixes toggle Graphs, right click nodes and styles

--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -59,7 +59,7 @@
       Entity Graph
     </md-checkbox>
 
-    <md-checkbox ng-model="showKeywordGraph" aria-label="Keyword Graph" ng-click="toggleKeywordGraph()">
+    <md-checkbox ng-model="showKeywordGraph" ng-checked="getDisplayKeywordGraph()" aria-label="Keyword Graph" ng-click="toggleKeywordGraph()">
       Keyword Graph
     </md-checkbox>
 
