--- a/public/partials/keywordNetwork.html
+++ b/public/partials/keywordNetwork.html
@@ -34,7 +34,7 @@
 </md-toolbar>
 
 <!-- legend and network are rendered above each other -->
-<div id="keywordLegend" ng-controller="KeywordLegendController as ctrl" ng-if="showKeywordLegend">
+<div id="keywordLegend" ng-controller="KeywordLegendController as ctrl" ng-if="false || showKeywordLegend">
     <vis-network data="ctrl.keywordLegendData" options="ctrl.keywordLegendOptions" events="ctrl.keywordLegendEvents" layout-fill></vis-network>
 </div>
 <div id="mykeywordnetwork">
