--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -58,28 +58,30 @@
                     <div ui-view="documentlist"></div>
                 </nav>
 
-                <main id="center-box-entity" resizable r-directions="['right']" r-flex="true" flex="none" ng-if="getDisplayEntityGraph()">
-                    <!-- selectedTab is defined in AppController -->
-                    <md-tabs md-selected="selectedTab.index" md-border-bottom md-autoselect layout-fill ngsf-fullscreen="NetworkController">
-
-                        <md-tab flex label="Entity Network">
-                            <div id="network" ui-view="network"></div>
-                        </md-tab>
-
-                        <div id="docii" ui-view="document"></div>
-                   </md-tabs>
-                </main>
-
-                <main id="center-box-keyword" resizable r-directions="['right']" r-flex="true" flex="none" ng-if="getDisplayKeywordGraph()">
+                <span class="graphs" ng-show="getDisplayEntityGraph() || getDisplayKeywordGraph()">
+                    <main id="center-box-entity" resizable r-directions="['right']" r-flex="true" flex="none" ng-show="getDisplayEntityGraph()" ng-class="{fullGraph: ! getDisplayKeywordGraph()}">
                         <!-- selectedTab is defined in AppController -->
-                    <md-tabs md-selected="0" md-border-bottom md-autoselect layout-fill ngsf-fullscreen="KeywordNetworkController">
+                        <md-tabs md-selected="selectedTab.index" md-border-bottom md-autoselect layout-fill ngsf-fullscreen="NetworkController">
 
-                        <md-tab flex label="Keyword Network">
-                            <div id="keywordNetwork" ui-view="keywordNetwork"></div>
-                        </md-tab>
+                            <md-tab flex label="Entity Network">
+                                <div id="network" ui-view="network"></div>
+                            </md-tab>
 
-                    </md-tabs>
-                </main>
+                            <div id="docii" ui-view="document"></div>
+                       </md-tabs>
+                    </main>
+
+                    <main id="center-box-keyword" resizable r-directions="['right']" r-flex="true" flex="none" ng-show="getDisplayKeywordGraph()" ng-class="{fullGraph: ! getDisplayEntityGraph()}">
+                            <!-- selectedTab is defined in AppController -->
+                        <md-tabs md-selected="0" md-border-bottom md-autoselect layout-fill ngsf-fullscreen="KeywordNetworkController">
+
+                            <md-tab flex label="Keyword Network">
+                                <div id="keywordNetwork" ui-view="keywordNetwork"></div>
+                            </md-tab>
+
+                        </md-tabs>
+                    </main>
+                </span>
 
                 <aside id="right-side" flex="" layout="column">
                     <!--<div id="filter-view" ui-view="filter" flex="none" resizable r-directions="['bottom']" r-flex="true"></div>-->
