--- a/public/partials/keywordNetwork.html
+++ b/public/partials/keywordNetwork.html
@@ -27,7 +27,7 @@
         </div>
         <md-slider ng-disabled="loading" flex min="1" max="{{ maxEdgeImportance }}" step ="1" md-discrete ng-model="edgeImportance" aria-label="blue"></md-slider>
 
-        <md-checkbox ng-model="tagsSelected" aria-label="Tags" ng-click="selectTags(tagsSelected, true)">
+        <md-checkbox ng-model="tagsSelected" ng-checked="getTagsSelected()" aria-label="Tags" ng-click="selectTags()">
             Tags
         </md-checkbox>
     </div>
