--- a/public/partials/keywordNetwork.html
+++ b/public/partials/keywordNetwork.html
@@ -34,8 +34,8 @@
 </md-toolbar>
 
 <!-- legend and network are rendered above each other -->
-<div id="keywordLegend" ng-controller="KeywordLegendController as ctrl" ng-if="false || showKeywordLegend">
-    <vis-network data="ctrl.keywordLegendData" options="ctrl.keywordLegendOptions" events="ctrl.keywordLegendEvents" layout-fill></vis-network>
+<div id="keywordLegend" ng-controller="KeywordLegendController as ctrl" ng-show="getToggleKeywordLegend()">
+    <vis-network data="ctrl.legendData" options="ctrl.legendOptions" events="ctrl.legendEvents" layout-fill style="left: 50%; top: 50%;"></vis-network>
 </div>
 <div id="mykeywordnetwork">
     <vis-network data="graphData" options="graphOptions" layout-fill events="graphEvents"></vis-network>
