Bug Fixing: Clicking and change translation

--- a/public/partials/document.html
+++ b/public/partials/document.html
@@ -125,7 +125,7 @@
                               New type?
                           </md-checkbox>
                         </form>
-                        <div class="whitelist-warning" ng-show="isEntityInDoc" ng-model="isEntityInDoc">Selection can not contain an existed entity</div>
+                        <div class="whitelist-warning" ng-show="isEntityInDoc" ng-model="isEntityInDoc">Selection cannot contain existing entity</div>
                       </md-content>
                       <md-dialog-actions layout="row" ng-hide="isEntityInDoc" ng-model="isEntityInDoc">
                         <md-button class="md-primary md-raised" ng-disabled="selectedType == false" type="submit" ng-click="ok()">OK</md-button>
