--- a/public/partials/keywordNetwork.html
+++ b/public/partials/keywordNetwork.html
@@ -19,7 +19,7 @@
     <div class="md-toolbar-tools" md-theme="control-theme" style="margin-top: 10px;">
         <md-input-container layout flex="10" ng-repeat="t in keywordTypes">
             <label>#{{ t.name }}</label>
-            <input ng-model="t.sliderModel" ng-change="reloadGraph()" type="number" step="1" min="0" ng-model-options="{updateOn: 'default blur', debounce: {default: 300, blur: 0} }">
+            <input ng-model="t.sliderModel" ng-keydown="event = $event" ng-click="event = null" ng-change="checkChange(event)" type="number" step="1" min="0" ng-model-options="{updateOn: 'default blur', debounce: {default: 1000, blur: 0} }">
         </md-input-container>
 
         <div flex="20" layout layout-align="center center">
