--- a/public/partials/document_list.html
+++ b/public/partials/document_list.html
@@ -17,7 +17,7 @@
 
 <div style="padding: 15px;" id="documents-view">
     <p style="font-size:16px">
-        Document Overview:
+        Documents:
         <span ng-show="hits > 0"> <b>{{hits}}</b> hits out of <b>{{sourceShared.documentsInDB}}</b> docs
         </span>
     </p>
