--- a/public/partials/metadata.html
+++ b/public/partials/metadata.html
@@ -16,9 +16,9 @@
   -->
 
 <div id="metadata" style="padding: 10px 0 0 10px;">
-    <p style="font-size:16px; display: inline-block">Frequency Overview</p>
+    <p style="font-size:16px; display: inline-block">Frequencies</p>
     <md-switch ng-model="reorder" aria-label="Ordering Mode" ng-change="resetMetadataView()" style="display: inline-block; padding: 0 0 0 16px; margin: 0;">
-        Order by black bars
+        Order by subset frequency
     </md-switch>
     <md-tabs md-stretch-tabs="always" md-dynamic-height="true">
             <md-tab md-on-select="updateHeight()">
