--- a/public/partials/metadata.html
+++ b/public/partials/metadata.html
@@ -16,8 +16,7 @@
   -->
 
 <div id="metadata" style="padding: 10px 0 0 10px;">
-    <p style="font-size:16px; display: inline-block">Frequencies</p>
-    <md-switch ng-model="reorder" aria-label="Ordering Mode" ng-change="resetMetadataView()" style="display: inline-block; padding: 0 0 0 16px; margin: 0;">
+    <md-switch ng-model="reorder" aria-label="Ordering Mode" ng-change="resetMetadataView()" style="display: inline-block; padding: 10px 16px; margin: 0;">
         Order by subset frequency
     </md-switch>
     <md-tabs md-stretch-tabs="always" md-dynamic-height="true">
