--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -42,12 +42,12 @@
       <md-icon class="material-icons" show-if-fullscreen=true>aspect_ratio</md-icon>
     </md-button>
 
-    <md-button class="md-raised md-small" ng-href="http://newsleak.io/projekt/" target="_blank" aria-label="Blog">
-      <md-tooltip> More informations about new/s/leak </md-tooltip>
+    <md-button class="md-raised md-small" ng-click="showAboutDialog()"  aria-label="Blog">
+      <md-tooltip> More information about new/s/leak </md-tooltip>
       <md-icon class="material-icons">info_outline</md-icon>
     </md-button>
 
-    <md-button class="md-raised md-small" ng-href="./assets/VIPvideo.mp4" target="_blank" aria-label="Video">
+    <md-button class="md-raised md-small" ng-href="https://uhh-lt.github.io/newsleak/documentation/" target="_blank" aria-label="Video">
       <md-tooltip> Help </md-tooltip>
       <md-icon class="material-icons">help_outline</md-icon>
     </md-button>
@@ -64,20 +64,5 @@
       Keyword Graph
     </md-checkbox>
 
-    <md-button class="md-raised" ng-href="https://www.volkswagenstiftung.de/" target="_blank" aria-label="VW">
-      <img class="institute-logo" src="./assets/images/Logo_Volkswagenstiftung.svg.png">
-    </md-button>
-
-    <md-button class="md-raised" ng-href="http://www.spiegel.de/" target="_blank" aria-label="Spiegel">
-      <img class="institute-logo" src="./assets/images/logo_der_spiegel.jpg">
-    </md-button>
-
-    <md-button class="md-raised" ng-href="https://www.lt.tu-darmstadt.de/de/lt-home/" target="_blank" aria-label="LT">
-      <img class="institute-logo" src="./assets/images/logo_language_technology_group.png">
-    </md-button>
-
-    <md-button class="md-raised" ng-href="http://www.gris.tu-darmstadt.de" target="_blank" aria-label="GRIS">
-      <img class="institute-logo" src="./assets/images/logo_graphisch-interaktive_systeme.png">
-    </md-button>
   </div>
 </md-toolbar>
